--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "freighthub-frontend-challenge",
+  "name": "thangleblog",
   "version": "1.0.0",
-  "description": "FreightHub Frontend Coding Challenge",
+  "description": "Personal blog",
   "main": "index.js",
-  "repository": "git@github.com:freight-hub/freighthub-frontend-challenge.git",
-  "author": "FreightHub Recruiting Team",
+  "repository": "git@github.com:thangle89/blog.git",
+  "author": "thangle",
   "license": "MIT",
   "scripts": {
     "start": "set NODE_ENV=development && webpack-dev-server --mode development --hot --inline --config webpack.config.js --open",
