--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^4.1.18",
     "awesome-typescript-loader": "^5.2.1",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.5.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
