--- a/modules/tsconfig.json
+++ b/modules/tsconfig.json
@@ -1,7 +1,4 @@
 {
-  "exclude": [
-    "modules"
-  ],
   "compilerOptions": {
     // Basic settings
     "allowJs": true,
@@ -21,7 +18,7 @@
     "jsx": "react",
     "declaration": false,
     "sourceMap": true,
-    "baseUrl": "src",
+    "baseUrl": "modules",
     "outDir": "./dist/js",
     // Rules
     "noImplicitAny": false,
@@ -33,7 +30,7 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     // Typings
-    "typeRoots": ["./src/typings", "./node_modules/@types"],
+    "typeRoots": ["./typings", "./node_modules/@types"],
     "types": ["node", "react", "react-dom"],
   }
 }
