--- a/modules/package.json
+++ b/modules/package.json
@@ -7,11 +7,11 @@
   "author": "thangle",
   "license": "MIT",
   "scripts": {
-    "start": "set NODE_ENV=development && webpack-dev-server --mode development --hot --inline --config webpack.config.js --open",
+    "start": "set NODE_ENV=development && webpack-dev-server --mode development --hot --inline --config webpack.config.js",
     "build": "set NODE_ENV=production && webpack --mode production --config webpack.config.js"
   },
   "dependencies": {
-    "@types/react": "^16.8.6",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "isomorphic-fetch": "^2.2.1",
     "json-server": "^0.14.2",
