--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.6",
-    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "react-redux": "^5.1.1",
     "react-route": "^1.0.3",
     "react-router-dom": "^5.0.1",
     "redux-thunk": "^2.3.0",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.35",
-    "@types/react-redux": "^7.1.1",
+    "@types/react-redux": "^5.0.21",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.2",
     "@types/redux-thunk": "^2.1.0",
